# Command-Line-SQL-Database-Engine

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: database.cpp  database.h  row.cpp  row.h  table.cpp  table.h
src/query/: query.cpp  query.h
src/storage/: btree.cpp  btree.h
